--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -7,6 +7,7 @@
 
   position: relative;
   z-index: 100;
+  overflow-x: hidden;
 }
 
 .backdrop {
